--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -2,12 +2,13 @@
 .header_container {
     width: 100%;
     position: fixed;
-    padding: 1rem 2rem;
+    padding: 1rem 1rem;
     top: 0;
     background-color: #f0f0f0;
     z-index: 100;
     box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
-    border: rounded-md;
+    display: flex;
+    align-items: center;
   }
   
   .header_title {
@@ -15,4 +16,22 @@
     font-size: 4rem;
     font-weight: 700;
     text-align: left;
+
+  }
+
+  .header_logo img {
+    width : 50%;
+    height: 50%;
+    justify-content: center;
+    align-items: center;
+    object-fit: contain;
+    object-position: center;
+    z-index: 0;
+  }
+
+  .header_logo {
+    width: 25%;
+    height: 25%;
+    border-radius: 0.375rem;
+    z-index: 0;
   }
