--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -16,22 +16,23 @@
     font-size: 4rem;
     font-weight: 700;
     text-align: left;
+    margin: 0;
 
-  }
-
-  .header_logo img {
-    width : 50%;
-    height: 50%;
-    justify-content: center;
-    align-items: center;
-    object-fit: contain;
-    object-position: center;
-    z-index: 0;
   }
 
   .header_logo {
-    width: 25%;
-    height: 25%;
+    width: 120px;
+    height: 120px;
     border-radius: 0.375rem;
     z-index: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .header_logo img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+    object-position: center;
   }
