--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -4,7 +4,7 @@
     position: fixed;
     padding: 1rem 1rem;
     top: 0;
-    background-color: #f0f0f0;
+    background-color: var(--color-secondary);
     z-index: 100;
     box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
     display: flex;
@@ -12,7 +12,7 @@
   }
   
   .header_title {
-    color: red;
+    color: var(--color-primary);
     font-size: 4rem;
     font-weight: 700;
     text-align: left;
